    [Peter Meyer]

  o Reading a bespoke cif dictonary no longer cripples "Get Monomer"
    for conventional residues [Judit Debreczeni]

  o Added Views system [inspired by PyMol]

  o Colour by B-factor and Occupancy

  o Ramachandran plot dialog remembers where it was put last time

  o Display Control confusion about Display/Active state of molecules
    untangled

    -------------------------------------------------------
    -------------------- Old Releases ---------------------
    -------------------------------------------------------


Release 0.3.1 "Another Basil Grande?"

  o Enable NCS ghosts
  
  o Add output of fractional matrix when doing coordinates
    superposition [George Sheldrick]


Release 0.3 "Basil Grande"

  o Fixed crash on closing Baton Guide Points molecule [Richard
    Baxter].

  o Fixed crash on manipulating N-terminal backbone angles [Richard
    Baxter].

  o Concept of "Active Residue" added [Frank von Delft].  Added
    trivial functions, (refine-active-residue),
    (refine-active-residue-triple) and (autofit-rotamer-active-residue),
    so that users can bind them to their own key choices.

  o Use "Active Residue" concept to navigate and update "Go To Atom"
    parameters [Bob Nolte].

  o Skip to next NCS Chain function added [Robert Xu].

  o Rationalized hydrogen usage in ligand fitting [Bob Nolte].

  o Added template/graph residue matching function.

  o Fixed problem of display lists and second GL context
    (i.e. side-by-side stereo with density problems).

  o Add a function to return all the dictionaries read [JED].

  o Added function to find and produce an "interesting things GUI" for
    residues with alternate conformations.  This is an instance of a
    more-general purpose function of any scriptable test on a residue
    producing a GUI [John MacLean].

  o fit-protein function now refines residues with alternate
    conformations [it doesn't rotamer-search the alternate
    conformations].
